# git-coauthor

./: .Cargo.toml.swp  .gitignore  .release-notes  .rubocop.yml  CHANGELOG.md  Cargo.toml  Gemfile  Makefile  README.md  git-coauthor.gemspec
.github/: dependabot.yml
.github/workflows/: build-lint-test.yml  build-release.yml  release.yml  test.yml
Formula/: git-coauthor.rb  template.txt
lib/: git_coauthor.rb
lib/git_coauthor/: cli.rb  git.rb  version.rb
man/: git-coauthor.1
script/: changelog.sh  homebrew-formula.rb  homebrew.sh  manpage.sh  readme.sh  release.rb  release.sh  test.sh  version.sh
spec/: spec_helper.rb
spec/git_coauthor/: cli_commit_spec.rb  cli_config_spec.rb  cli_help_spec.rb  cli_install_spec.rb  cli_session_spec.rb  cli_unexpected_args_spec.rb  cli_version_spec.rb
src/: main.rs
