# See https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "git-coauthor"
version = "4.0.0"
edition = "2021"
authors = ["Nick Dower <nicholasdower@gmail.com>"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
home = "0.5"
git2 = "0.18"
openssl = { version = "0.10", features = ["vendored"] }
